@@ -26,6 +26,12 @@ specify the order of completion matches. This affects the display
 of candidate matches and the order in which they are selected when
 cycling between them using menu completion.
 
+The :h and :t modifiers in parameter expansion (if braces are present),
+glob qualifiers and history expansion may take following decimal digit
+arguments in order to keep that many leading or trailing path components
+instead of the defaults of all but one (:h) and one (:t).  In an absolute
+path the leading '/' counts as one component.
+
 Changes from 5.6.2 to 5.7.1
 ---------------------------
 
